# CQF

./: Dockerfile  LICENSE  README.md  devcontainer.json  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  activate.sh  devcontainer.json
